src/test/ui/token/issue-41155.rs
impl S { //~ ERROR cannot find type
    pub
} //~ ERROR expected one of

fn main() {}
